--- a/lojra-logjike-client/src/app/games/tango/tango.component.scss
+++ b/lojra-logjike-client/src/app/games/tango/tango.component.scss
@@ -94,6 +94,8 @@
   flex-direction: column;
   justify-content: flex-start;
   margin-top: 12px;
+  width: 0;
+  min-width: 100%;
 }
 
 .conflict-message {
